# test_project

./: .coverage  .git-blame-ignore-revs  README.md  all_files.txt  lead_crm.db  main.py  pyproject.toml  requirements.txt
src/app/services/: __init__.py  distribution_service.py
src/domain/entities/: __init__.py  contact.py  contact_status.py  lead.py  operator.py  operator_source.py  source.py
src/domain/repositories/: __init__.py  base.py  contact_repository.py  lead_repository.py  operator_repository.py  operator_source_repository.py  source_repository.py
src/infra/db/: __init__.py  connection.py  models.py
src/infra/repositories/: __init__.py  mappers.py  sqlalchemy_contact_repo.py  sqlalchemy_lead_repo.py  sqlalchemy_operator_repo.py  sqlalchemy_operator_source_repo.py  sqlalchemy_source_repo.py
src/presentation/api/: __init__.py  contacts.py  dependencies.py  leads.py  operators.py  schemas.py  sources.py
tests/fakes/: repositories.py
tests/integration/: test_api.py  test_operator_repo.py
tests/unit/domain/entities/: test_contact.py  test_lead.py  test_operator.py  test_operator_source.py  test_source.py
tests/unit/services/: test_distribution_service.py
