[project]
name = "test_for_amocrm"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
 "fastapi>=0.128.0",
 "httpx>=0.28.1",
 "pytest-cov>=7.0.0",
 "pytest-coverage>=0.0",
 "sqlalchemy>=2.0.45",
 "uvicorn>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-cov",
    "mypy>=1.17.1",
    "pre-commit>=4.2.0",
    "pytest-mypy-plugins>=3.2.0",
    "ruff>=0.12.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "T20",    # flake8-print
    "Q",      # flake8-quotes
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "PTH",    # ппflake8-use-pathlib
    "ERA",    # flake8-eradicate
    "PL",     # pylint
    "RUF",    # ruff-specific
    "PLR",
]

ignore = [
    "E501",
    "PLR0913",
]

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/*" = ["T20", "S101", "PLR2004", "PLC0415", "N806",]
"main.py" = ["T201"]
"scripts/*" = ["T201"]
"*/api/routers/*.py" = ["B008"]
"src/presentation/api/**" = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false
plugins = ["pydantic.mypy"]

exclude = [
    ".venv",
    "venv",
    "build",
    "dist",
    "alembic"
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "scripts.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*",
    "pydantic.*",
    "pydantic_settings.*",
    "fastapi.*",
    "pytest.*",
    "pytest_asyncio.*",
    "sqlalchemy.*",
    "alembic.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = 'pydantic'
ignore_missing_imports = false
